k8s/core/service-discovery/service-discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery
  namespace: ecommerce-microservice
  labels:
    app: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      serviceAccountName: microservice-sa
      containers:
      - name: service-discovery
        image: selimhorri/service-discovery-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8761
