k8s/core/service-discovery/service-discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-discovery
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: service-discovery
  ports:
  - port: 8761
    targetPort: 8761
