k8s/core/service-discovery/service-discovery-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-eureka-registration
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: service-discovery
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {} # allow all pods in the same namespace to register/discover
    ports:
    - protocol: TCP
      port: 8761
